crates/relune-cli/tests/snapshots/snapshot_tests__help_diff.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Compare two schemas and show differences

Usage: relune diff [OPTIONS] <--before <FILE>|--before-sql-text <TEXT>|--before-schema-json <FILE>> <--after <FILE>|--after-sql-text <TEXT>|--after-schema-json <FILE>>

Options:
      --before <FILE>
          Baseline SQL or schema JSON file

  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --before-sql-text <TEXT>
          Baseline SQL DDL directly from a string

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

      --before-schema-json <FILE>
          Baseline normalized schema JSON file

  -v, --verbose...
          Increase log verbosity (can be repeated)

      --after <FILE>
          Updated SQL or schema JSON file

  -q, --quiet
          Reduce non-error output

      --after-sql-text <TEXT>
          Updated SQL DDL directly from a string

      --after-schema-json <FILE>
          Updated normalized schema JSON file

      --dialect <DIALECT>
          SQL dialect for parsing (auto-detected if omitted)

          Possible values:
          - auto:     Automatically detect dialect from SQL content
          - postgres: `PostgreSQL` dialect
          - mysql:    `MySQL` dialect
          - sqlite:   `SQLite` dialect

  -f, --format <FORMAT>
          Output format

          Possible values:
          - text:     Human-readable text output
          - json:     JSON output
          - svg:      SVG diagram with diff overlay
          - html:     Self-contained HTML with diff overlay
          - markdown: GitHub-flavored Markdown output

  -o, --out <FILE>
          Output file path; stdout if omitted

      --stdout
          Allow raw SVG/HTML output on stdout even when stdout is a terminal

      --fail-on-warning
          Exit with non-zero code if warnings are emitted

      --exit-code
          Exit with code 10 if schema changes are detected (like `git diff --exit-code`)

      --allow-invalid-schema
          Continue even when an input has empty or duplicate table, column, view, or enum names; the
          validation errors are reported as warnings

  -h, --help
          Print help (see a summary with '-h')
