crates/relune-cli/tests/snapshots/snapshot_tests__help_doc.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Generate schema documentation as Markdown

Usage: relune doc [OPTIONS]

Options:
  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --sql <FILE>
          Read SQL DDL from a file

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

      --sql-text <TEXT>
          Read SQL DDL directly from a string

      --schema-json <FILE>
          Read a normalized schema JSON file

  -v, --verbose...
          Increase log verbosity (can be repeated)

      --db-url <URL>
          Database URL for live introspection: `postgres://`, `mysql://`, `mariadb://`, or `sqlite:`
          (no SQL file)

  -q, --quiet
          Reduce non-error output

      --dialect <DIALECT>
          SQL dialect for parsing (auto-detected if omitted)

          Possible values:
          - auto:     Automatically detect dialect from SQL content
          - postgres: `PostgreSQL` dialect
          - mysql:    `MySQL` dialect
          - sqlite:   `SQLite` dialect

  -o, --out <FILE>
          Output file path; stdout if omitted

      --fail-on-warning
          Exit with non-zero code if warnings are emitted

  -h, --help
          Print help (see a summary with '-h')

An input is required: pass --sql, --schema-json, or --db-url (--sql-text where supported), or set
the DATABASE_URL environment variable (used only when no input flag is given).
