crates/relune-cli/tests/snapshots/snapshot_tests__help_export.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Export schema JSON, graph JSON, layout JSON, or diagram text (Mermaid / D2 / DOT)

Usage: relune export [OPTIONS]

Options:
  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --sql <FILE>
          Read SQL DDL from a file

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

      --sql-text <TEXT>
          Read SQL DDL directly from a string

      --schema-json <FILE>
          Read a normalized schema JSON file

  -v, --verbose...
          Increase log verbosity (can be repeated)

      --db-url <URL>
          Database URL for live introspection: `postgres://`, `mysql://`, `mariadb://`, or `sqlite:`
          (no SQL file)

  -q, --quiet
          Reduce non-error output

      --dialect <DIALECT>
          SQL dialect for parsing (auto-detected if omitted)

          Possible values:
          - auto:     Automatically detect dialect from SQL content
          - postgres: `PostgreSQL` dialect
          - mysql:    `MySQL` dialect
          - sqlite:   `SQLite` dialect

      --format <FORMAT>
          Export format. Required unless provided by `export.format` in config

          Possible values:
          - schema-json: Normalized schema JSON
          - graph-json:  Graph JSON (intermediate representation)
          - layout-json: Layout JSON (positioned graph)
          - mermaid:     Mermaid ER diagram (`erDiagram`)
          - d2:          D2 diagram source
          - dot:         Graphviz DOT (`digraph`)

  -o, --out <FILE>
          Output file path; stdout if omitted

      --focus <TABLE>
          Optional focus table

      --viewpoint <NAME>
          Apply a named viewpoint from the active config file

      --depth <N>
          Focus depth. Defaults to `1` after config merge

      --group-by <GROUP_BY>
          Grouping mode

          Possible values:
          - none:   No grouping
          - schema: Group by schema name
          - prefix: Group by table name prefix

      --include <PATTERN>
          Explicitly include only tables matching these glob patterns

      --exclude <PATTERN>
          Exclude tables matching these glob patterns from output

      --layout <LAYOUT>
          Layout algorithm for positioned output

          Possible values:
          - hierarchical:   Standard hierarchical layout
          - force-directed: Force-directed layout

      --edge-style <EDGE_STYLE>
          Edge routing style for positioned output

          Possible values:
          - straight:   Direct line from source to target
          - orthogonal: Axis-aligned orthogonal polyline
          - curved:     Cubic curved edge

      --direction <DIRECTION>
          Layout direction for positioned output

          Possible values:
          - top-to-bottom: Top to bottom (default)
          - left-to-right: Left to right
          - right-to-left: Right to left
          - bottom-to-top: Bottom to top

      --density <DENSITY>
          Columns each table card lists in positioned output

          Possible values:
          - overview: Table names, kinds, and relationships only
          - keys:     Key columns and the columns relationships refer to
          - full:     Every column with its type and constraints

      --fail-on-warning
          Exit with non-zero code if warnings are emitted

  -h, --help
          Print help (see a summary with '-h')

An input is required: pass --sql, --schema-json, or --db-url (--sql-text where supported), or set
the DATABASE_URL environment variable (used only when no input flag is given).
