crates/relune-cli/tests/snapshots/snapshot_tests__help_lint.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Lint schema for issues and anti-patterns

Usage: relune lint [OPTIONS]

Options:
  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --sql <FILE>
          Read SQL DDL from a file

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

      --db-url <URL>
          Database URL for live introspection: `postgres://`, `mysql://`, `mariadb://`, or `sqlite:`
          (no SQL file)

      --schema-json <FILE>
          Read a normalized schema JSON file

  -v, --verbose...
          Increase log verbosity (can be repeated)

      --dialect <DIALECT>
          SQL dialect for parsing (auto-detected if omitted)

          Possible values:
          - auto:     Automatically detect dialect from SQL content
          - postgres: `PostgreSQL` dialect
          - mysql:    `MySQL` dialect
          - sqlite:   `SQLite` dialect

  -q, --quiet
          Reduce non-error output

      --format <FORMAT>
          Output format. Defaults to `text` after config merge

          Possible values:
          - text: Human-readable text output
          - json: JSON output

  -o, --out <FILE>
          Output file path; stdout if omitted

      --profile <PROFILE>
          Review profile used to seed the active rule set

          Possible values:
          - default: Balanced schema review profile for CI and day-to-day review
          - strict:  Stricter profile with full comment coverage checks

      --rules <RULE>
          Restrict execution to specific rules (can be repeated)

      --exclude-rules <RULE>
          Remove specific rules from the active rule set (can be repeated)

      --rule-category <CATEGORY>
          Restrict execution to specific rule categories (can be repeated)

          Possible values:
          - structure:     Structural schema design rules
          - relationships: Foreign key and relational integrity rules
          - naming:        Naming convention rules
          - documentation: Table and column comment coverage rules

      --except-table <PATTERN>
          Suppress issues for tables matching a glob pattern (can be repeated)

      --deny <SEVERITY>
          Minimum severity that causes non-zero exit

          Possible values:
          - error:   Error severity
          - warning: Warning severity
          - info:    Info severity
          - hint:    Hint severity (lowest)

      --fail-on-warning
          Exit with non-zero code if warnings are emitted

  -h, --help
          Print help (see a summary with '-h')

An input is required: pass --sql, --schema-json, or --db-url (--sql-text where supported), or set
the DATABASE_URL environment variable (used only when no input flag is given).
