crates/relune-cli/tests/snapshots/snapshot_tests__help_review.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Review a schema migration for safety risks

Usage: relune review [OPTIONS]

Options:
      --before <FILE>
          Baseline SQL or schema JSON file

  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --before-sql-text <TEXT>
          Baseline SQL DDL directly from a string

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

      --before-schema-json <FILE>
          Baseline normalized schema JSON file

  -v, --verbose...
          Increase log verbosity (can be repeated)

      --after <FILE>
          Updated SQL or schema JSON file

  -q, --quiet
          Reduce non-error output

      --after-sql-text <TEXT>
          Updated SQL DDL directly from a string

      --after-schema-json <FILE>
          Updated normalized schema JSON file

      --dialect <DIALECT>
          SQL dialect for parsing AND review evaluation (defaults to `auto`, which auto-detects the
          parser dialect). Lock-risk rules activate on `postgres` or `mysql`. Under `auto` the
          review uses the parser-resolved dialect when both inputs agree (so lock-risk runs
          automatically when both sides parse to postgres/mysql); a `REVIEW002` warning is emitted
          when the two sides disagree, and `sqlite` keeps lock-risk inactive (with an info-level
          skip diagnostic when a lock-risk rule was pinned via `--rules`)

          Possible values:
          - auto:     Automatically detect dialect from SQL content
          - postgres: `PostgreSQL` dialect
          - mysql:    `MySQL` dialect
          - sqlite:   `SQLite` dialect

  -f, --format <FORMAT>
          Output format. Defaults to `text` after config merge

          Possible values:
          - text:     Human-readable text output
          - markdown: GitHub-flavored Markdown output
          - json:     JSON output

  -o, --out <FILE>
          Output file path; stdout if omitted

      --rules <RULE>
          Restrict execution to specific rules (can be repeated)

      --except-rule <RULE>
          Remove specific rules from the active rule set (can be repeated)

      --except-table <PATTERN>
          Suppress findings for tables matching a glob pattern (can be repeated)

      --deny <SEVERITY>
          Minimum severity that causes non-zero exit

          Possible values:
          - info:     Information-only findings
          - warning:  Warning-level findings (semantic shifts)
          - caution:  Caution-level findings (operational risk)
          - breaking: Breaking findings (migration is expected to fail)

      --exit-code
          Exit with code 10 if any findings are emitted

      --fail-on-warning
          Exit with code 3 if warning diagnostics are emitted or input coverage is incomplete, such
          as SQL the parser skipped as unsupported or an input with no schema objects. The report
          and `--emit-summary` file are still written

      --allow-invalid-schema
          Continue even when an input has empty or duplicate table, column, view, or enum names; the
          validation errors are reported as warnings

      --list-rules
          List all review rules (with default severity and description) and exit.
          
          Honors `--format text|json` only (default `text`); `markdown` is rejected. When set,
          `--before` / `--after` are ignored.

      --emit-summary <PATH>
          Write the full review JSON (same shape as `--format json`) to PATH in addition to the
          user-visible output. The file is always written, even when `--deny` or `--fail-on-warning`
          short-circuits the user-visible run with rc=10 or rc=3

  -h, --help
          Print help (see a summary with '-h')
