crates/relune-cli/tests/snapshots/snapshot_tests__help_root.snap
---
source: crates/relune-cli/tests/snapshot_tests.rs
expression: stdout
---
Render, inspect, export, lint, and diff database schemas

Usage: relune [OPTIONS] <COMMAND>

Commands:
  render   Render an ERD from SQL, schema JSON, or database metadata
  inspect  Inspect schema metadata or details for a specific table
  export   Export schema JSON, graph JSON, layout JSON, or diagram text (Mermaid / D2 / DOT)
  lint     Lint schema for issues and anti-patterns
  doc      Generate schema documentation as Markdown
  diff     Compare two schemas and show differences
  review   Review a schema migration for safety risks
  help     Print this message or the help of the given subcommand(s)

Options:
  -c, --config <CONFIG>
          Path to configuration file (TOML; merges with CLI flags)

      --color <COLOR>
          Colorize output

          Possible values:
          - auto:   Colorize if output is a terminal
          - always: Always colorize output
          - never:  Never colorize output
          
          [default: auto]

  -v, --verbose...
          Increase log verbosity (can be repeated)

  -q, --quiet
          Reduce non-error output

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
